Fixed numerous problems with invoices not generating